Update testing config

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,5 +44,25 @@ where = src
 [bdist_wheel]
 python-tag = py37
 
+##########################
+# Coverage Configuration #
+# (doc8.ini)             #
+##########################
 [doc8]
 max-line-length = 120
+
+##########################
+# Coverage Configuration #
+# (.coveragerc)          #
+##########################
+[coverage:run]
+branch = True
+source = multisplitby
+
+[coverage:paths]
+source =
+    src/multisplitby
+    .tox/*/lib/python*/site-packages/multisplitby
+
+[coverage:report]
+show_missing = True
