--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     pyroma
     readme
     doc8
+    doctest
     py
     coverage-report
 
@@ -33,7 +34,6 @@ skip_install = true
 commands = check-manifest
 
 [testenv:flake8]
-basepython = python3
 skip_install = true
 deps =
     flake8
@@ -78,13 +78,16 @@ deps =
     pygments
 
 [testenv:doc8]
-basepython = python3
 skip_install = true
 deps =
     sphinx
     doc8
 commands =
     doc8 README.rst
+
+[testenv:doctest]
+commands =
+    python -m doctest src/multisplitby/__init__.py
 
 [testenv:coverage-report]
 deps = coverage
@@ -104,7 +107,6 @@ deps =
     bumpversion
 
 [testenv:build]
-basepython = python3
 skip_install = true
 deps =
     wheel
@@ -113,7 +115,6 @@ commands =
     python setup.py -q sdist bdist_wheel
 
 [testenv:release]
-basepython = python3
 skip_install = true
 deps =
     {[testenv:build]deps}
@@ -123,7 +124,6 @@ commands =
     twine upload --skip-existing dist/*
 
 [testenv:finish]
-basepython = python3
 skip_install = true
 deps =
     {[testenv:release]deps}
