--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ jobs:
     # test stage
     - stage: test
       env: TOXENV=py
+    - env: TOXENV=doctest
 matrix:
   allow_failures:
       - env: TOXENV=mypy
