Fix doc8 configuration header

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,11 +41,10 @@ zip_safe = true
 [options.packages.find]
 where = src
 
-
-##########################
-# Coverage Configuration #
-# (doc8.ini)             #
-##########################
+######################
+# Doc8 Configuration #
+# (doc8.ini)         #
+######################
 [doc8]
 max-line-length = 120
 
