Add python35 tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
+    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3 :: Only
@@ -30,7 +31,7 @@ keywords =
     iteration
 
 [options]
-python_requires = >=3
+python_requires = >=3.5
 tests_require =
     tox
 packages = find:
