--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,14 @@ cache: pip
 language: python
 python:
   - 3.6
+  - 3.5
 stages:
   - lint
   - docs
   - test
+env:
+  - TOXENV=py
+  - TOXENV=doctest
 jobs:
   include:
     # lint stage
@@ -20,13 +24,7 @@ jobs:
     - stage: docs
       env: TOXENV=doc8
     - env: TOXENV=readme
-    # test stage
-    - stage: test
-      env: TOXENV=py
-    - env: TOXENV=doctest
-matrix:
-  allow_failures:
-      - env: TOXENV=mypy
+    # tests stage gets propagated automatically
 install:
   - sh -c 'if [ "$TOXENV" = "py" ]; then pip install tox codecov coverage; else pip install tox; fi'
 script:
