Make sure home variable is available for bumpversion in tox

--- a/tox.ini
+++ b/tox.ini
@@ -96,6 +96,7 @@ commands =
 
 [testenv:bumpversion]
 commands = bumpversion {posargs}
+passenv = HOME
 skip_install = true
 deps =
     bumpversion
@@ -119,6 +120,7 @@ commands =
 
 [testenv:finish]
 skip_install = true
+passenv = HOME
 deps =
     {[testenv:release]deps}
     bumpversion
