--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = multisplitby
-version = 0.0.1
+version = 0.0.2-dev
 url = https://github.com/cthoyt/multisplitby
 download_url = https://github.com/cthoyt/multisplitby/releases
 project_urls =
